tests/golden/error/private_use_not_exported/main.expected
warning: Phase A.5 global collection failed with 1 error; cross-module imports may not resolve.
  first error: error[E0006]: cannot find `secret_fn` in module `middle` (at 202..219)
  hint: run `tungsten doctor check phase-a5 <file>` for details
[E0006] Error: cannot find `secret_fn` in module `middle`
   ╭─[tests/golden/error/private_use_not_exported/main.tg:8:5]
   │
 8 │ use middle::secret_fn;
   │     ────────┬────────  
   │             ╰────────── 
   │ 
   │ Note: Phase A.5 global collection failed — this error may be caused by a bad import in another module. Run `tungsten doctor check phase-a5 <file>` for details.
───╯

error: aborting due to 1 error
